--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "client-gateway"]
 	path = client-gateway
 	url = git@github.com:Nest-Microservices-Products-Pay/client-gateway.git
+[submodule "orders-ms"]
+	path = orders-ms
+	url = https://github.com/Nest-Microservices-Products-Pay/order-microservices.git
