--- a/.env.template
+++ b/.env.template
@@ -1,1 +1,10 @@
 CLIENT_GATEWAY_PORT=3000
+
+PAYMENTS_MS_PORT=3003
+STRIPE_SECRET=
+STRIPE_SUCCESS_URL=http://localhost:3003/payments/success
+STRIPE_CANCEL_URL=http://localhost:3003/payments/cancelled
+
+# Por aqui se consigue en secret del webhook
+# https://dashboard.stripe.com/test/workbench/webhooks/we_1QtcTICLJ0Do9trjkkONg3rd/events
+STRIPE_ENDPOINT_SECRET=
