Se sube env actualziado

--- a/.env.template
+++ b/.env.template
@@ -7,4 +7,8 @@ STRIPE_CANCEL_URL=http://localhost:3003/payments/cancelled
 
 # Por aqui se consigue en secret del webhook
 # https://dashboard.stripe.com/test/workbench/webhooks/we_1QtcTICLJ0Do9trjkkONg3rd/events
-STRIPE_ENDPOINT_SECRET=
+STRIPE_ENDPOINT_SECRET=whsec_BsuQfuSunzzF8WZ0
+AUTH_DATABASE_URL=mongodb+srv://root:<password>@auth-microservice-db.92im7.mongodb.net/AuthDB
+JWT_SECRET=e#4Sgdfg
+
+ORDERS_DATABASE_URL=postgresql://neondb_owner:npg_icCsD4BZL7vV@ep-ancient-union-a8aaiis4-pooler.eastus2.azure.neon.tech/
