--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -18,6 +18,16 @@ services:
       - PORT=3000
       - NATS_SERVERS=nats://nats-server:4222
 
+  auth-ms:
+    build: ./auth-ms
+    volumes:
+      - ./auth-ms/src:/usr/src/app/src
+    command: npm run start:dev
+    environment:
+      - PORT=3004
+      - NATS_SERVERS=nats://nats-server:4222
+      - DATABASE_URL=${AUTH_DATABASE_URL}
+      - JWT_SECRET=${JWT_SECRET}
   products-ms:
     build: ./products-ms
     volumes:
@@ -27,7 +37,6 @@ services:
       - PORT=3001
       - NATS_SERVERS=nats://nats-server:4222
       - DATABASE_URL=file:./dev.db
-
   orders-ms:
     depends_on:
       - orders-db
